--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 matplotlib>=3.2.2
 numpy>=1.18.5
 opencv-python>=4.1.2
-Pillow
+Pillow~=8.3.2
 PyYAML>=5.3.1
 scipy>=1.4.1
 torch>=1.7.0
@@ -17,7 +17,7 @@ tensorboard>=2.4.1
 
 # plotting ------------------------------------
 seaborn>=0.11.0
-pandas
+pandas~=1.3.2
 
 # export --------------------------------------
 # coremltools>=4.1
@@ -27,4 +27,9 @@ pandas
 # extras --------------------------------------
 # Cython  # for pycocotools https://github.com/cocodataset/cocoapi/issues/172
 # pycocotools>=2.0  # COCO mAP
-thop  # FLOPs computation
+thop~=0.0.31.post2005241907
+
+requests~=2.26.0
+colorama~=0.4.4
+djitellopy~=2.4.0
+Dijkstar~=2.6.0
