--- a/requirements.txt
+++ b/requirements.txt
@@ -6,13 +6,11 @@ numpy>=1.18.5
 opencv-python>=4.1.2
 Pillow~=8.3.2
 PyYAML>=5.3.1
-scipy>=1.4.1
 torch>=1.7.0
 torchvision>=0.8.1
 tqdm>=4.41.0
 
 # logging -------------------------------------
-tensorboard>=2.4.1
 # wandb
 
 # plotting ------------------------------------
@@ -33,3 +31,4 @@ requests~=2.26.0
 colorama~=0.4.4
 djitellopy~=2.4.0
 Dijkstar~=2.6.0
+pygame~=2.1.0
